--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-server": "^20.0.0",
@@ -32,6 +33,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "express": "^5.1.0",
+    "firebase": "^10.14.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
