Fix Angular version conflicts for Netlify

--- a/package.json
+++ b/package.json
@@ -22,18 +22,17 @@
       }
     ]
   },
-  "private": true,
-  "dependencies": {
-  "@angular/common": "^20.0.0",
-  "@angular/compiler": "^20.0.0",
-  "@angular/core": "^20.0.0",
-  "@angular/fire": "^20.0.1",
-  "@angular/forms": "^20.0.0",
-  "@angular/platform-browser": "^20.0.0",
-  "@angular/platform-browser-dynamic": "^20.0.0",
-  "@angular/platform-server": "^20.0.0",
-  "@angular/router": "^20.0.0",
-  "@angular/ssr": "^20.0.5",
+ "dependencies": {
+  "@angular/common": "20.1.6",
+  "@angular/compiler": "20.1.6",
+  "@angular/core": "20.1.6",
+  "@angular/forms": "20.1.6",
+  "@angular/platform-browser": "20.1.6",
+  "@angular/platform-browser-dynamic": "20.1.6",
+  "@angular/platform-server": "20.1.6",
+  "@angular/router": "20.1.6",
+  "@angular/ssr": "20.1.6",
+  "@angular/fire": "20.1.6",
   "aos": "^2.3.4",
   "bootstrap": "^5.3.7",
   "express": "^5.1.0",
@@ -42,9 +41,9 @@
   "tslib": "^2.3.0"
 },
 "devDependencies": {
-  "@angular-devkit/build-angular": "^20.0.5",
-  "@angular/cli": "^20.0.5",
-  "@angular/compiler-cli": "^20.0.0",
+  "@angular-devkit/build-angular": "20.1.6",
+  "@angular/cli": "20.1.6",
+  "@angular/compiler-cli": "20.1.6",
   "@types/express": "^5.0.1",
   "@types/jasmine": "~5.1.0",
   "@types/node": "^20.17.19",
