--- a/package.json
+++ b/package.json
@@ -22,37 +22,37 @@
       }
     ]
   },
- "dependencies": {
-  "@angular/common": "20.1.6",
-  "@angular/compiler": "20.1.6",
-  "@angular/core": "20.1.6",
-  "@angular/forms": "20.1.6",
-  "@angular/platform-browser": "20.1.6",
-  "@angular/platform-browser-dynamic": "20.1.6",
-  "@angular/platform-server": "20.1.6",
-  "@angular/router": "20.1.6",
-  "@angular/ssr": "20.1.6",
-  "@angular/fire": "20.1.6",
-  "aos": "^2.3.4",
-  "bootstrap": "^5.3.7",
-  "express": "^5.1.0",
-  "firebase": "^10.14.1",
-  "rxjs": "~7.8.0",
-  "tslib": "^2.3.0"
-},
-"devDependencies": {
-  "@angular-devkit/build-angular": "20.1.6",
-  "@angular/cli": "20.1.6",
-  "@angular/compiler-cli": "20.1.6",
-  "@types/express": "^5.0.1",
-  "@types/jasmine": "~5.1.0",
-  "@types/node": "^20.17.19",
-  "jasmine-core": "~5.7.0",
-  "karma": "~6.4.0",
-  "karma-chrome-launcher": "~3.2.0",
-  "karma-coverage": "~2.2.0",
-  "karma-jasmine": "~5.1.0",
-  "karma-jasmine-html-reporter": "~2.1.0",
-  "typescript": "~5.8.2"
-}
+  "dependencies": {
+    "@angular/common": "17.3.9",
+    "@angular/compiler": "17.3.9",
+    "@angular/core": "17.3.9",
+    "@angular/forms": "17.3.9",
+    "@angular/platform-browser": "17.3.9",
+    "@angular/platform-browser-dynamic": "17.3.9",
+    "@angular/platform-server": "17.3.9",
+    "@angular/router": "17.3.9",
+    "@angular/ssr": "17.3.9",
+    "@angular/fire": "^17.1.1",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.7",
+    "express": "^5.1.0",
+    "firebase": "^10.14.1",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "17.3.9",
+    "@angular/cli": "17.3.9",
+    "@angular/compiler-cli": "17.3.9",
+    "@types/express": "^5.0.1",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.17.19",
+    "jasmine-core": "~5.7.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.3.3"
+  }
 }
