--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
       }
     ]
   },
-"dependencies": {
-  "@angular/common": "17.3.9",
-  "@angular/compiler": "17.3.9",
-  "@angular/core": "17.3.9",
-  "@angular/forms": "17.3.9",
-  "@angular/platform-browser": "17.3.9",
-  "@angular/platform-browser-dynamic": "17.3.9",
-  "@angular/platform-server": "17.3.9",
-  "@angular/router": "17.3.9",
-  "@angular/ssr": "17.3.9",
-"@angular/fire": "^17.1.1",
-  "aos": "^2.3.4",
-  "bootstrap": "^5.3.7",
-  "express": "^5.1.0",
-  "firebase": "^10.14.1",
-  "rxjs": "~7.8.0",
-  "tslib": "^2.3.0"
-},
+  "dependencies": {
+    "@angular/common": "17.3.9",
+    "@angular/compiler": "17.3.9",
+    "@angular/core": "17.3.9",
+    "@angular/fire": "^20.0.1",
+    "@angular/forms": "17.3.9",
+    "@angular/platform-browser": "17.3.9",
+    "@angular/platform-browser-dynamic": "17.3.9",
+    "@angular/platform-server": "17.3.9",
+    "@angular/router": "17.3.9",
+    "@angular/ssr": "17.3.9",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.7",
+    "express": "^5.1.0",
+    "firebase": "^12.1.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0"
+  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.9",
-    "@angular/cli": "17.3.9",
+    "@angular-devkit/build-angular": "^17.3.17",
+    "@angular/cli": "^20.1.5",
     "@angular/compiler-cli": "17.3.9",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
