Fix: downgrade @angular/fire to 7.6.5 for Angular 17 compatibility

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve:ssr:softcode": "node dist/softcode/server/server.mjs"
   },
   "engines": {
-    "node": "20.11.1"
+"node": "20.x"
   },
   "prettier": {
     "overrides": [
